--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 	<div class="aboutme">
     <div class="picture">
-      <img src="portrait6.png" alt=""> 
+      <img src="pictures/portrait6.png" alt=""> 
     </div>
   	<h1 class="about">About me </h1>
 		<p>Hello, I am a professional Front-End Web developer from Uzbekistan. I hold a bachelor degree of computer engineering from Gachon university. Programming languages: Html, CSS, Java, C#, C++, Python. <br><br> I am 21 years old right now and I have been learning web developement for 2 years. In my childhood, I was not interested in IT at all and did not have any idea what was it itself. As time passes, I became more familiar with Computer Engineering and it started attracting me. First, I started studying computer-related subjects at colllege. <br><br> After graduating college in 2019, I applied to Gachon University in South Korea. During university years I have learned many programming languages. I also have done some projects in group and alone and I am going to share the link of a website that I created  and posted on my <a href="github.com" target="_blank">Github</a> account. You can get links of them in the <a href="#projects">projects</a> section.</p>
@@ -95,7 +95,7 @@
 
     	<div class="app">
 	    	<div class="image">
-	    		<img src="logo1.png" alt="">
+	    		<img src="pictures/logo1.png" alt="">
 	    	</div>
 
 	    	<div class="app-info"> 
